--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,16 @@
 <resources>
     <string name="app_name">Sugbo Eats</string>
+    <string name="sugbo_eats">
+        Sugbo Eats
+    </string>
+    <string name="heading_one">Easy</string>
+    <string name="heading_two">Convenient</string>
+    <string name="heading_three">Enjoy</string>
+
+    //Description
+    <string name="desc_one">Effortlessly book your favorite tables with Sugbo Eats.</string>
+    <string name="desc_two">Dine your way - alfresco, indoors, or with special requests.</string>
+    <string name="desc_three">Enjoy hassle-free booking confirmations and QR code check-ins.</string>
+
+
 </resources>
